--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --files src/index.ts",
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --fix"
   },
   "author": "",
@@ -21,7 +21,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "rimraf": "^5.0.8",
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
